--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.6",
     "swagger": "^0.7.5",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "xml2js": "^0.4.23"
   }
 }
