--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nexmo": "^2.9.1",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.6",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^4.1.4",
+    "twilio": "^3.51.0",
     "xml2js": "^0.4.23"
   }
 }
